# Basil

./: .gitignore  .readme.md  README.md  basil  basil_search_cli.py  docker-compose.yml  init_collections.py  install.sh  pyproject.toml  setup.py  workflow.json
basil-search/: .dockerignore  .env.example  DOCKER_SETUP.md  Dockerfile  README.md  __init__.py  _version.py  app.py  chroma-data.py  consolidate_scraped_pages.py  docker-compose.yml  nginx.conf  pipeline.py  requirements.txt  text.json  training_data_en.md
basil-search/basil_search/: __init__.py  app.py  basil_search_cli.py  pipeline.py
basil-search/basil_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
basil-search/basil_search/routers/: ask.py  detect_intent.py  search.py  setup.py  site_scanner.py
basil-search/basil_search/src/: __init__.py  config.py
basil-search/basil_search/templates/: setup.html
basil-search/chroma_db/: chroma.sqlite3
basil-search/content/: search_sentences.md
basil-search/content/scraped_pages/: jacouxit_be_diensten_Fotografie-en-drone-videografie.html.md  jacouxit_be_diensten_digitale-marketing.html.md  jacouxit_be_diensten_software-ontwikkeling.html.md  jacouxit_be_diensten_website-ontwikkeling.html.md  jacouxit_be_index.html.md  jacouxit_be_projecten_BASF.html.md  jacouxit_be_projecten_Rentshop.html.md  jacouxit_be_projecten_Salus TMB.html.md  jacouxit_be_projecten_betfirst.html.md  jacouxit_be_projecten_ferm.html.md  jacouxit_be_promo-Landen.html.md
basil-search/data/processed/: search_sentences.md  website_content_overview.md
basil-search/data/scraped_pages/: jacouxit_be_blog_Wordpress-of-niet.html.md  jacouxit_be_blog_hoe-onze-site-scoort.html.md  jacouxit_be_contact.html.md  jacouxit_be_diensten_webshop-ontwikkeling.html.md  jacouxit_be_index.md  jacouxit_be_portfolio.html.md  jacouxit_be_prijzen-software.html.md  jacouxit_be_prijzen-webshop.html.md  jacouxit_be_prijzen.html.md  jacouxit_be_projecten_Clovio.html.md  jacouxit_be_projecten_Vanier.html.md  jacouxit_be_projecten_ab-inbev.html.md  jacouxit_be_projecten_apache.html.md  jacouxit_be_projecten_engie.html.md  jacouxit_be_projecten_zimmo.html.md
basil-search/docs/: index.html
basil-search/routers/: generate_ticket.py  site_scanner.py
basil-search/site_scanner/: populate_db.py  site_scanner.py
basil-search/src/: config.py
basil-search/src/api/: __init__.py
basil-search/src/database/: chroma_manager.py
chroma_db/: chroma.sqlite3
(+12 files in other folders)
