[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "basil-search"
version = "1.0.0"
description = "AI-Powered Website Search Engine with ChromaDB and Groq"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Basil Team", email = "team@basil-retriever.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "markdownify>=0.11.6",
    "lxml>=4.9.3",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.15",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pathlib2>=2.3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.10.1",
    "flake8>=6.1.0",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
]
legacy = [
    "flask",
    "fpdf2",
    "markdown",
    "spacy",
]

[project.scripts]
basil = "app:main"
basil-pipeline = "pipeline:main"
basil-server = "app:run_server"

[project.urls]
Homepage = "https://github.com/basil-retriever/Basil"
Documentation = "https://github.com/basil-retriever/Basil#readme"
Repository = "https://github.com/basil-retriever/Basil"
"Bug Tracker" = "https://github.com/basil-retriever/Basil/issues"

[tool.setuptools]
package-dir = {"" = "basil-search"}

[tool.setuptools.packages.find]
where = ["basil-search"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["basil-search/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]